--- a/src/App.css
+++ b/src/App.css
@@ -2,15 +2,8 @@
   font-family: Inter, system-ui, Avenir, Helvetica, Arial, sans-serif;
 }
 
-.container-speacial {
-  max-width: 1110px;
-  width: 100%;
-  margin-left: auto;
-  margin-right: auto;
-}
-
 .App {
-  max-width: 960px;
+  max-width: 1110px;
   margin: 0 auto;
 }
 
@@ -26,10 +19,6 @@ nav {
   gap: 10px;
   align-items: center;
   margin-top: 30px;
-}
-
-nav h1 {
-  margin-right: auto;
 }
 
 nav a {
@@ -64,6 +53,6 @@ nav a.active {
   div {
     display: flex;
     gap: 40px;
-    height: 100%;
+    /* height: 100%; */
   }
 }
