--- a/src/Home.css
+++ b/src/Home.css
@@ -1,17 +1,20 @@
 .Home {
     display: flex;
-    gap: 50px;
+    gap: 30px;
     align-items: center;
+    flex-direction: row;
+    justify-content: space-between;
 
-    div {
-        width: 445px;
-        display: flex;
-        flex-direction: column;
-        gap: 80px;
+    
+}
 
-        img {
-            width: 50px;
-        }
+.div {
+    width: 445px;
+    display: flex;
+    gap: 80px;
+
+    img {
+        width: 50px;
     }
 }
 
@@ -21,9 +24,13 @@
     font-weight: 700;
     line-height: 100px;
     text-align: left;
-    /* width: 635px; */
+    width: 635px;
 
     span {
         color: #F67E7E;
     }
 }
+
+/* .group {
+    position: absolute;
+} */
